--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -7,7 +7,9 @@
 	margin: 0;
 	padding: 0;
 }
+
 :root {
+	--brandColor: #f65235;
 	--primaryPurple: #646ff0;
 	--black-1: #646681;
 	--black-2: #585858;
@@ -19,18 +21,22 @@
 	--black: black;
 	--white: white;
 }
+
 html {
 	font-size: 10px;
 }
+
 body {
 	font-family: 'Poppins', sans-serif;
 	width: 100%;
 	min-height: 100vh;
 	background-color: var(--bg-1);
 }
+
 * {
 	font-family: 'Poppins', sans-serif;
 }
+
 .container {
 	width: 90%;
 	max-width: 1200px;
