Form completed and list started

--- a/src/styles/modules/header.module.scss
+++ b/src/styles/modules/header.module.scss
@@ -1,7 +1,7 @@
 .header {
     color: var(--brandColor);
 
-    .headerContainer {
+    .header-container {
         width: 100%;
         height: 100px;
         padding: 1rem;
