--- a/src/styles/modules/actions.module.scss
+++ b/src/styles/modules/actions.module.scss
@@ -1,8 +1,10 @@
 .btn-box {
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: start;
+    padding: 1.5rem;
     gap: 1rem;
+    margin-left: -1.2rem;
 
     .btn {
         padding: 0.5rem;
@@ -29,4 +31,5 @@
 
 input {
     accent-color: var(--primaryPurple);
+  
 }
