--- a/src/styles/modules/tableMuı.module.scss
+++ b/src/styles/modules/tableMuı.module.scss
@@ -26,6 +26,11 @@
         td {
             font-size: 1.05rem;
         }
+
+        .completed {
+            text-decoration: line-through;
+            opacity: 50%;
+        }
     }
 
 
