--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -18,8 +18,9 @@
 	--bg-3: #cccdde;
 	--gray-1: #eee;
 	--gray-2: #dedfe1;
-	--black: black;
-	--white: white;
+	--urgent: rgba(238, 16, 16, 0.932);
+	--regular: rgb(221, 208, 22);
+	--trivial: rgb(26, 94, 243);
 }
 
 html {
@@ -41,18 +42,19 @@ body {
 	width: 90%;
 	max-width: 1200px;
 	margin: 0 auto;
+	
+
 }
 
+@media screen and (max-width: 700px) {
+	.Toastify__toast-container--bottom-right {
+		
+		padding: 0rem 1rem !important;
+		margin-bottom: 5rem !important;
+	}
 
-/* 
-<style>
-  #mySelect {
-    background-color: blue;
-    color: white;
-  }
-</style>
-<select id="mySelect">
-  <option value="option1">Option 1</option>
-  <option value="option2">Option 2</option>
-</select>
- */
+ }
+
+
+
+
