--- a/src/styles/modules/filter.module.scss
+++ b/src/styles/modules/filter.module.scss
@@ -16,7 +16,7 @@
         gap: 5rem;
         background-color: var(--bg-3);
         border-radius: 5px;
-
+        padding: 2rem 1.5rem;
 
 
         .input-box {
@@ -38,6 +38,7 @@
 
                 &:focus {
                     outline: none;
+                
                     background-color: transparent;
                 }
 
@@ -50,7 +51,19 @@
                     font-size: 1.2rem;
                     opacity: 100%;
                     color: black;
+                    border-radius: 3px;
+                
 
+
+                }
+
+                &:valid+label {
+                    background-color: var(--bg-1);
+                    top: 1px;
+                    font-size: 1.2rem;
+                    opacity: 100%;
+                    color: black;
+                    border-radius: 3px;
 
                 }
 
@@ -76,22 +89,34 @@
 
             .icon {
                 position: absolute;
-                top: 20px;
+                top: 22px;
                 left: 20px;
             }
 
         }
 
-        select {
-            width: 20%;
-            height: 43px;
-            border: 1px solid var(--gray-2);
-            border-radius: 3px;
-            padding-left: 1.2rem;
-            flex-shrink: 0;
+        .select-box {
+            width: 27%;
+            position: relative;
 
-            &:focus {
-                outline: none;
+            select {
+                width: 100%;
+                height: 43px;
+                border: 1px solid var(--gray-2);
+                border-radius: 3px;
+                padding-left: 1.2rem;
+                flex-shrink: 0;
+
+                &:focus {
+                    outline: none;
+                }
+
+            }
+
+            label {
+                position: absolute;
+                top: -20px;
+                font-size: 1.2rem;
             }
 
         }
@@ -101,7 +126,7 @@
             font-weight: bold;
             color: var(--primaryPurple);
             flex-shrink: 0;
-            margin-left: 1rem;
+            margin-left: -2rem;
 
 
         }
@@ -111,4 +136,27 @@
 
     }
 
+}
+
+@media screen and (max-width: 700px) {
+    .filter-container {
+        flex-direction: column;
+        gap: 2rem !important;
+        padding: 1rem 0.5rem !important;
+
+        .input-box {
+            width: 100% !important;
+        }
+
+        .select-box {
+            width: 95% !important;
+        }
+
+        span {
+         
+            margin-left: 0rem !important;
+
+
+        }
+    }
 }
