--- a/src/styles/modules/form.module.scss
+++ b/src/styles/modules/form.module.scss
@@ -1,6 +1,7 @@
 .form {
     padding-top: 3rem;
 
+
     .form-container {
 
         display: flex;
@@ -39,7 +40,16 @@
                     font-size: 1.2rem;
                     opacity: 100%;
                     color: black;
+                    border-radius: 3px;
+                }
 
+                &:valid+label {
+                    background-color: var(--bg-1);
+                    top: 1px;
+                    font-size: 1.2rem;
+                    opacity: 100%;
+                    color: black;
+                    border-radius: 3px;
                 }
 
 
@@ -63,16 +73,30 @@
 
         }
 
-        select {
-            width: 20%;
-            height: 43px;
-            border: 1px solid var(--gray-2);
-            border-radius: 3px;
-            padding-left: 1.2rem;
+        .select-box {
+            width: 25%;
             flex-shrink: 0;
+            height: 43px;
+            position: relative;
 
-            &:focus {
-                outline: none;
+
+            select {
+                width: 100%;
+                height: 43px;
+                border: 1px solid var(--gray-2);
+                border-radius: 3px;
+                padding-left: 1.2rem;
+
+
+                &:focus {
+                    outline: none;
+                }
+            }
+
+            label {
+                position: absolute;
+                top: -20px;
+                font-size: 1.2rem;
             }
 
         }
@@ -101,9 +125,19 @@
     }
 
 
+}
 
+@media screen and (max-width: 700px) {
+    .form-container {
+        flex-direction: column;
+        gap: 2rem !important;
 
+        .input-box {
+            width: 100% !important;
+        }
 
-
-
+        .select-box {
+            width: 95% !important;
+        }
+    }
 }
