--- a/src/styles/modules/list.module.scss
+++ b/src/styles/modules/list.module.scss
@@ -1,4 +1,3 @@
-
 .list {
     margin-top: 3rem;
     padding-bottom: 10rem !important;
@@ -103,7 +102,7 @@
                 .btn-box {
                     display: flex;
                     align-items: center;
-                    justify-content: start;
+                    justify-content: flex-start;
                     padding: 1.5rem;
                     gap: 1rem;
                     margin-left: -1.2rem;
