--- a/src/styles/modules/modal.module.scss
+++ b/src/styles/modules/modal.module.scss
@@ -20,6 +20,7 @@
             border-radius: 3px;
             padding: 2rem;
             display: block;
+            cursor: not-allowed;
         }
 
 
